forecast/src/objects/ForecastHierarchyConfigurations__c.object
<CustomObject>
    <label>Forecast Hierarchy Configuration</label>
    <pluralLabel>Forecast Hierarchy Configurations</pluralLabel>
    <description>Forecast Hierarchy Configurations map a specific Role to a User that will act as a manager. Part of the Specialist Forecasting AppExchange package from Salesforce Labs.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <displayFormat>FHC-{000000}</displayFormat>
        <label>Hierarchy Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <fields>
        <fullName>HierarchyRole__c</fullName>
        <label>Hierarchy Role</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyRoleUser__c</fullName>
        <label>Hierarchy Role User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HierarchyRoleUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsManager__c</fullName>
        <label>Is Manager?</label>
        <defaultValue>true</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>Is Active?</label>
        <defaultValue>true</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HashForCheck__c</fullName>
        <label>Hash Code Check</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExtIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>External Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>checkAccessToSyncJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check AccessTo SyncJob</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HierarchyRole__c</columns>
        <columns>HierarchyRoleUser__c</columns>
        <columns>IsManager__c</columns>
        <columns>IsActive__c</columns>
        <columns>Comment__c</columns>
        <columns>HashForCheck__c</columns>
        <columns>ExtIdentifier__c</columns>
        <columns>CheckAccessToSyncJob__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>